<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.quarkus.ts.openshift</groupId>
    <artifactId>parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Quarkus OpenShift TS: Parent</name>

    <modules>
        <module>app-metadata/deployment</module>
        <module>app-metadata/runtime</module>
        <module>common</module>

        <module>http</module>
        <module>configmap</module>
        <module>messaging/artemis</module>
        <module>messaging/artemis-jta</module>
        <module>messaging/amqp-reactive</module>
        <module>messaging/qpid</module>
        <module>scaling</module>
        <module>sql-db/app</module>
        <module>sql-db/postgresql</module>
        <module>sql-db/mysql</module>
        <module>sql-db/mariadb</module>
        <module>sql-db/mssql</module>
        <module>security/basic</module>
        <module>security/jwt</module>
        <module>security/keycloak</module>
        <module>security/keycloak-authz</module>
        <module>security/https-1way</module>
        <module>security/https-2way</module>
        <module>microprofile</module>

        <module>external-applications/todo-demo-app</module>
        <module>external-applications/quarkus-workshop-super-heroes</module>

        <module>deployment-strategies/quarkus</module>
    </modules>

    <properties>
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
        <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>

        <version.apache-httpclient-fluent>4.5.12</version.apache-httpclient-fluent> <!-- same as Apache HTTP Client managed by Quarkus BOM -->
        <version.fusesource-jansi>1.18</version.fusesource-jansi>
        <version.impsort-maven-plugin>1.4.1</version.impsort-maven-plugin>
        <version.jandex-maven-plugin>1.0.8</version.jandex-maven-plugin>
        <version.jjwt>0.11.2</version.jjwt>
        <version.keytool-maven-plugin>1.5</version.keytool-maven-plugin>
        <version.maven-compiler-plugin>3.8.1</version.maven-compiler-plugin>
        <version.maven-jar-plugin>3.2.0</version.maven-jar-plugin>
        <version.maven-surefire-plugin>2.22.2</version.maven-surefire-plugin>
        <version.quarkus>1.3.3.Final</version.quarkus>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>${quarkus.platform.artifact-id}</artifactId>
                <version>${version.quarkus}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>io.quarkus.ts.openshift</groupId>
                <artifactId>app-metadata</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.quarkus.ts.openshift</groupId>
                <artifactId>common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.quarkus.ts.openshift</groupId>
                <artifactId>sql-db-app</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.quarkus.ts.openshift</groupId>
                <artifactId>sql-db-app</artifactId>
                <version>${project.version}</version>
                <classifier>tests</classifier>
            </dependency>

            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${version.jjwt}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${version.jjwt}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${version.jjwt}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>fluent-hc</artifactId>
                <version>${version.apache-httpclient-fluent}</version>
            </dependency>
            <dependency>
                <groupId>org.fusesource.jansi</groupId>
                <artifactId>jansi</artifactId>
                <version>${version.fusesource-jansi}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${version.quarkus}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>build</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${version.maven-compiler-plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${version.maven-jar-plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${version.maven-surefire-plugin}</version>
                    <configuration>
                        <systemProperties>
                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        </systemProperties>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${version.maven-surefire-plugin}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>keytool-maven-plugin</artifactId>
                    <version>${version.keytool-maven-plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.jboss.jandex</groupId>
                    <artifactId>jandex-maven-plugin</artifactId>
                    <version>${version.jandex-maven-plugin}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>format</id>
            <activation>
                <property>
                    <name>!no-format</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>net.revelc.code</groupId>
                        <artifactId>impsort-maven-plugin</artifactId>
                        <version>${version.impsort-maven-plugin}</version>
                        <configuration>
                            <groups>*,javax.,java.</groups>
                            <staticGroups>*</staticGroups>
                            <staticAfter>true</staticAfter>
                            <removeUnused>true</removeUnused>
                        </configuration>
                        <executions>
                            <execution>
                                <id>sort-imports</id>
                                <goals>
                                    <goal>sort</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>quarkus-core-only</id>
            <activation>
                <property>
                    <name>quarkus-core-only</name>
                </property>
            </activation>
            <properties>
                <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
                <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
                <version.qpid-jms>0.15.0</version.qpid-jms>
                <version.quarkus>999-SNAPSHOT</version.quarkus>
            </properties>
            <dependencyManagement>
                <dependencies>
                    <dependency>
                        <groupId>org.amqphub.quarkus</groupId>
                        <artifactId>quarkus-qpid-jms</artifactId>
                        <version>${version.qpid-jms}</version>
                    </dependency>
                </dependencies>
            </dependencyManagement>
        </profile>
    </profiles>
</project>
